--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -12,6 +12,16 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 		<servlet-name>Mtajava</servlet-name>
 		<url-pattern>/mtajava</url-pattern>
 	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>Ex03</servlet-name>
+		<servlet-class>com.myorg.javacourse.Ex03Servlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>Ex03</servlet-name>
+		<url-pattern>/ex03</url-pattern>
+	</servlet-mapping>
+	
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
 	</welcome-file-list>
