--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -12,7 +12,6 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 		<servlet-name>Mtajava</servlet-name>
 		<url-pattern>/mtajava</url-pattern>
 	</servlet-mapping>
-	
 	<servlet>
 		<servlet-name>Ex03</servlet-name>
 		<servlet-class>com.myorg.javacourse.Ex03Servlet</servlet-class>
@@ -21,13 +20,12 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 		<servlet-name>Ex03</servlet-name>
 		<url-pattern>/ex03</url-pattern>
 	</servlet-mapping>
-	
 	<servlet>
-		<servlet-name>Ex04</servlet-name>
+		<servlet-name>StockDetails</servlet-name>
 		<servlet-class>com.myorg.javacourse.StockDetailsServlet</servlet-class>
 	</servlet>
 	<servlet-mapping>
-		<servlet-name>Ex04</servlet-name>
+		<servlet-name>StockDetails</servlet-name>
 		<url-pattern>/stockdetails</url-pattern>
 	</servlet-mapping>
 	
